# ipcam-uploadgdrive

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
uploadgdrive/: config.json  config.py  googledrive.py  item.py  main.py  miscellaneous.py
