[project]
name = "ipcam-uploadgdrive"
version = "1.0.0"
authors = [
    { name="barmor420", email="barmor420@outlook.com" }
]
description = "A program to upload IPCAM files to google drive"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/barmor420/ipcam-uploadgdrive"
"Bug Tracker" = "hhttps://github.com/barmor420/ipcam-uploadgdrive/issues"